[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ui/panel/panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/hud/hud_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/ui/hud/hud.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/hud/debug_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/hud/chime_bad.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/ui/hud/chime_default.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/ui/hud/chime_good.wav" type="AudioStream" id=7]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Container" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.901961 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="DebugLabel" type="Label" parent="Container"]
margin_left = 520.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 56.0
grow_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "DEBUG INFO"
align = 2

[node name="Panel" parent="Container" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 50.0
margin_right = -100.0
margin_bottom = -50.0

[node name="RichTextLabel" type="RichTextLabel" parent="Container/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 8.0
margin_right = -12.0
margin_bottom = -8.0
mouse_default_cursor_shape = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
meta_underlined = false

[node name="TextTimer" type="Timer" parent="Container/Panel"]
wait_time = 0.01

[node name="BottomPanel" parent="Container" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 380.0
margin_right = 576.0
margin_bottom = 492.0

[node name="RichTextLabel" type="RichTextLabel" parent="Container/BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 8.0
margin_right = -12.0
margin_bottom = -8.0
mouse_default_cursor_shape = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
meta_underlined = false
fit_content_height = true
scroll_active = false
scroll_following = true

[node name="CloseButton" type="Button" parent="Container/BottomPanel"]
margin_left = 496.0
margin_top = -12.0
margin_right = 516.0
margin_bottom = 8.0
mouse_default_cursor_shape = 2
text = "X"

[node name="TextTimer" type="Timer" parent="Container/BottomPanel"]
wait_time = 0.025

[node name="Tween" type="Tween" parent="Container/BottomPanel"]

[node name="ChimeGood" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ChimeBad" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ChimeDefault" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="meta_clicked" from="Container/Panel/RichTextLabel" to="." method="_on_panel_meta_clicked"]
[connection signal="timeout" from="Container/Panel/TextTimer" to="." method="_on_panel_text_timer_timeout"]
[connection signal="meta_clicked" from="Container/BottomPanel/RichTextLabel" to="." method="_on_bottom_panel_meta_clicked"]
[connection signal="pressed" from="Container/BottomPanel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="timeout" from="Container/BottomPanel/TextTimer" to="." method="_on_bottom_panel_text_timer_timeout"]
